--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 .loader {
-    width: 48px;
+    width: 300px;
     height: 48px;
     border: 3px solid #fff;
     border-radius: 50%;
     display: inline-block;
     position: relative;
     box-sizing: border-box;
-    animation: rotation 1s linear infinite;
   }
   .loader::after {
     content: '';
@@ -22,15 +21,6 @@
     border-bottom-color: #ff3d00;
   }
   
-  @keyframes rotation {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  
   .breed-select {
     width: 300;
   }
@@ -39,15 +29,13 @@
     width: 300;
   }
   .loader-text {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
+    font-family:  Arial, sans-serif;
     font-size: 20px;
   }
   
   .error {
     color: #ff3d00;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
+    font-family:  Arial, sans-serif;
     font-size: 20px;
   }
   
@@ -81,21 +69,18 @@
   }
   
   .cat-name {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
+    font-family:  Arial, sans-serif;
     font-size: 24px;
   }
   
   .cat-description {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
+    font-family:  Arial, sans-serif;
     font-size: 16px;
   }
   .temperament {
     font-weight: 600;
   }
   .cat-temp {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
+    font-family:  Arial, sans-serif;
     font-size: 16px;
   }
